hphp/hack/test/typecheck/no_disjoint_union/gating_class.php.exp
ERROR: File "gating_class.php", line 3, characters 11-27:
Cannot use unstable feature: `no_disjoint_union` (Parsing[1002])
