hphp/hack/test/typecheck/no_disjoint_union/gating_class.php
<?hh

class C<<<__NoDisjointUnion>> T> {}
